syntax = "proto3";

package atomix.raft;

option java_package = "io.atomix.raft.protocol";
option java_outer_classname = "RaftProto";
option java_multiple_files = true;

message RaftMember {
    string member_id = 1;
    Type type = 2;
    int64 updated = 3;

    enum Type {
        INACTIVE = 0;
        PASSIVE = 1;
        PROMOTABLE = 2;
        ACTIVE = 3;
    }
}

message SessionMetadata {
    int64 session_id = 1;
    string service_name = 2;
    string service_type = 3;
}

enum ReadConsistency {
    SEQUENTIAL = 0;
    LINEARIZABLE_LEASE = 1;
    LINEARIZABLE = 2;
}
